@@ -6,6 +6,9 @@ debian-installer (20051031) UNRELEASED; urgency=low
   [ Kurt Roeckx ]
   * Stop building the monolithic target on amd64.
 
+  [ Colin Watson ]
+  * Only generate /etc/lsb-release if a udeb hasn't already provided it.
+
  -- Stephen R. Marenka <smarenka@debian.org>  Mon, 31 Oct 2005 10:54:50 -0600
 
 debian-installer (20051026) unstable; urgency=low
